--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </ul>
 
     <h2>Contato</h2>
-    <p>Email: <a href="mailto:seuemail@gmail.com">seuemail@gmail.com</a></p>
+    <p>Email: <a href="mailto:seuemail@gmail.com">lannekarla03@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/laianekarla" target="_blank">linkedin.com/in/laianekarla</a></p>
 </div>
 
