--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <h2>Contato</h2>
     <p>Email: <a href="mailto:seuemail@gmail.com">lannekarla03@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/laianekarla" target="_blank">linkedin.com/in/laianekarla</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/laianekarla" target="_blank">https://www.linkedin.com/in/laiane-silva-781134195/</a></p>
 </div>
 
 <footer>
