--- a/index.html
+++ b/index.html
@@ -5,44 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Laiane Karla</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;600&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Fira Sans', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #121212;
+            color: #ffffff;
         }
         header {
-            background: #0077cc;
+            background: #ff007f;
             color: white;
             text-align: center;
             padding: 20px;
+            font-size: 1.5em;
+            font-weight: 600;
         }
         .container {
             width: 80%;
             margin: auto;
             padding: 20px;
-            background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background: #1e1e1e;
+            box-shadow: 0 0 10px rgba(255, 0, 127, 0.5);
             border-radius: 10px;
+            margin-top: 20px;
         }
         h1, h2 {
-            color: #0077cc;
+            color: #ff007f;
         }
         ul {
             list-style: none;
             padding: 0;
         }
         li {
-            background: #e3f2fd;
+            background: #292929;
             margin: 10px 0;
             padding: 10px;
             border-radius: 5px;
+            transition: 0.3s;
+        }
+        li:hover {
+            background: #ff007f;
+            color: #121212;
+        }
+        a {
+            color: #ff007f;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        a:hover {
+            text-decoration: underline;
         }
         footer {
             text-align: center;
             padding: 10px;
-            background: #0077cc;
+            background: #ff007f;
             color: white;
             margin-top: 20px;
         }
@@ -82,7 +100,7 @@
         <li>Certificação de inglês intermediário (listening, conversação e speaking).</li>
     </ul>
 
-    <h2>Contato</h2>
+     <h2>Contato</h2>
     <p>Email: <a href="mailto:seuemail@gmail.com">lannekarla03@gmail.com</a></p>
    <p>LinkedIn: <a href="https://www.linkedin.com/in/laiane-silva-781134195/" target="_blank">https://www.linkedin.com/in/laiane-silva-781134195/</a></p>
 </div>
