--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
 <header>
     <h1>Laiane Karla</h1>
-    <p>Quality Assurance (QA) | Testes de Software</p>
+    <img src="minha-foto.jpg" alt="Foto de Laiane Karla" class="profile-photo">
+<p>Quality Assurance (QA) | Testes de Software</p>
 </header>
 
 <div class="container">
