--- a/index.html
+++ b/index.html
@@ -98,10 +98,15 @@
     </ul>
 
     <h2>Formação e Certificações</h2>
-    <ul>
-        <li>Estudando Análise e Desenvolvimento de Sistemas.</li>
-        <li>Certificação de inglês intermediário (listening, conversação e speaking).</li>
-    </ul>
+<ul>
+    <li>Estudando Análise e Desenvolvimento de Sistemas.</li>
+    <li>
+        <a href="https://github.com/Laianekarla/Meu-portf-lio/blob/main/certificate.pdf" target="_blank">
+            Certificação de inglês intermediário (listening, conversação e speaking).
+        </a>
+    </li>
+</ul>
+
 
      <h2>Contato</h2>
     <p>Email: <a href="mailto:seuemail@gmail.com">lannekarla03@gmail.com</a></p>
