--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
 <div class="container">
     <h2>Sobre Mim</h2>
-    <p>Sou QA na NTT Data há 2 anos e 9 meses, atuando no cliente Bradesco. Tenho experiência em testes de páginas web, APIs e atualmente trabalho com testes em mainframe.</p>
+    <p>Sou QA na NTT Data há quase 3 anos, atuando no cliente Bradesco Tenho experiência em testes de páginas web, APIs e atualmente trabalho com testes em mainframe.</p>
 
     <h2>Experiência</h2>
     <ul>
         <li>Testes para a proposta 4966 do Banco Central.</li>
-        <li>Squad focada em base de dados, com experiência em SQL e testes em banco de dados.</li>
+        <li>Atuei em uma squad focada em base de dados, realizando testes SQL e validações em banco de dados</li>
         <li>Ferramentas de testes: Octane e Xray.</li>
         <li>Uso diário de Jira e Confluence.</li>
         <li>Responsável por geração de massas de dados para testes.</li>
@@ -102,7 +102,7 @@
     <li>Estudando Análise e Desenvolvimento de Sistemas.</li>
     <li>
         <a href="https://github.com/Laianekarla/Meu-portf-lio/blob/main/certificate.pdf" target="_blank">
-            Certificação de inglês intermediário (listening, conversação e speaking).
+            Certificação de inglês intermediário (listening, speaking e escrita).
         </a>
     </li>
 </ul>
