--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
             </div>
         </div>
         
-       <h2>Contato</h2>
-    <p>Email: <a href="mailto:seuemail@gmail.com">lannekarla03@gmail.com</a></p>
-   <p>LinkedIn: <a href="https://www.linkedin.com/in/laiane-silva-781134195/" target="_blank">https://www.linkedin.com/in/laiane-silva-781134195/</a></p>
-        <p>Certificação: <a href="certificate.pdf" target="_blank">Certificado de Inglês</a></p>
-</div>
+        <h2>Contato</h2>
+        <ul class="contact-list">
+            <li><i class="fas fa-envelope"></i> Email: <a href="mailto:lannekarla03@gmail.com">lannekarla03@gmail.com</a></li>
+            <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/laiane-silva-781134195/" target="_blank">Meu LinkedIn</a></li>
+            <li><i class="fas fa-file-alt"></i> Certificação: <a href="certificate.pdf" target="_blank" class="certification-link">Certificado de Inglês</a></li>
+        </ul>
+    </div>
     
     <footer>
         <p>&copy; 2025 Laiane Karla. Todos os direitos reservados.</p>
