--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <img src="profile.jpg" alt="Foto de Perfil" class="profile-photo">
+        <img src="minha-foto" alt="Foto de Perfil" class="profile-photo">
         <h1>Laiane Karla</h1>
         <p>Analista de Qualidade | Testes Manuais & Automatizados</p>
     </header>
