--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="minha-foto" alt="Foto de Perfil" class="profile-photo">
+        <img src="minha-foto.jpg" alt="Foto de Perfil" class="profile-photo">
         <h1>Laiane Karla</h1>
         <p>Analista de Qualidade | Testes Manuais & Automatizados</p>
     </header>
