--- a/index.html
+++ b/index.html
@@ -39,16 +39,10 @@
         </table>
         
         <h2>Projetos e Experimentos</h2>
-        <div class="projects">
-            <div class="project">
-                <img src="test-automation.png" alt="Testes Automatizados">
-                <p>Automação de testes de login no sistema Parabank utilizando Cypress.</p>
-            </div>
-            <div class="project">
-                <img src="sql-validation.png" alt="SQL Tests">
-                <p>Execução de testes SQL para validação de dados em banco de dados.</p>
-            </div>
-        </div>
+        <ul class="projects-list">
+            <li><a href="#" target="_blank">Automação de testes de login no sistema Parabank</a></li>
+            <li><a href="#" target="_blank">Execução de testes SQL para validação de dados</a></li>
+        </ul>
         
         <h2>Contato</h2>
         <ul class="contact-list">
