--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="minha-foto.jpg" alt="Foto de Perfil" class="profile-photo">
-        <h1>Laiane Karla</h1>
+        <h1 class="name">Laiane Karla</h1>
         <p>Analista de Qualidade | Testes Manuais & Automatizados</p>
     </header>
     
