--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </tr>
         </table>
         
-        <h2>Projetos e Experimentos</h2>
+        <h2>Projetos Pessoais</h2>
         <ul class="projects-list">
             <li><a href="#" target="_blank">Automação de testes de login no sistema Parabank</a></li>
-            <li><a href="#" target="_blank">Execução de testes SQL para validação de dados</a></li>
+            <li><a href="#" target="_blank">Snake-Game</a></li>
         </ul>
         
         <h2>Contato</h2>
