--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Meu Portfólio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            text-align: center;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -26,10 +40,38 @@
             </tr>
             <tr>
                 <td><i class="fas fa-database"></i> SQL</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-desktop"></i> Testes em Ambiente Mainframe</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td><i class="fas fa-bug"></i> Testes Manuais</td>
+                <td><i class="fas fa-cloud"></i> Testes de API</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-globe"></i> Testes de Aplicações Web</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-random"></i> Testes de Integração</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-sync"></i> Testes Regressivos</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-network-wired"></i> Testes End-to-End</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-tools"></i> Ferramentas de Teste (Octane, Xray)</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td><i class="fas fa-tasks"></i> Gestão de Projetos (Jira, Confluence)</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
@@ -38,10 +80,10 @@
             </tr>
         </table>
         
-        <h2>Projetos Pessoais</h2>
+        <h2>Projetos e Experimentos</h2>
         <ul class="projects-list">
             <li><a href="#" target="_blank">Automação de testes de login no sistema Parabank</a></li>
-            <li><a href="#" target="_blank">Snake-Game</a></li>
+            <li><a href="#" target="_blank">Execução de testes SQL para validação de dados</a></li>
         </ul>
         
         <h2>Contato</h2>
