--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@
             <p>Atuo como Analista de Qualidade na NTT Data, trabalhando para o cliente Bradesco. Tenho experiência com testes manuais e estou me aprofundando em automação de testes.</p>
         </section>
         
-       <section>
+      <section>
     <h2>Formação</h2>
-    <p>🎓 <strong>Cursando Análise e Desenvolvimento de Sistemas</strong></p>
-    <p>🏅 <strong>Inglês em andamento</strong> - <a href="certificate.pdf" target="_blank">Certificado</a></p>
+    <div class="formacao-container">
+        <div class="formacao-item">
+            <i class="fas fa-graduation-cap"></i>
+            <p>Cursando Análise e Desenvolvimento de Sistemas</p>
+        </div>
+        <div class="formacao-item">
+            <i class="fas fa-language"></i>
+            <p>Inglês - <a href="certificate.pdf" target="_blank">Ver Certificado</a></p>
+        </div>
+    </div>
 </section>
+
 
         
        <section>
